# pucp-web-mining-project

./: .gitignore  app.py  pyproject.toml  requirements.txt
data/: keywords.json  nombre_rubros.csv  ordenes.parquet  ordenes_lda.parquet  ordenes_servicio_lda_sample.parquet
scripts/: processing.py  processing2.py
