[project]
name = "pucp-web-mining-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.3",
    "faicons>=0.2.2",
    "fontawesome>=5.10.1.post1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "polars>=1.17.1",
    "pyarrow>=18.1.0",
    "requests>=2.32.3",
    "shiny>=1.2.1",
    "shinywidgets>=0.3.4",
]
